logs/Slang/generated/hdlconv/hdlconvertor_p491.sv.log
name: hdlconvertor_p491
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p491.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p491.sv:1:1: error: expected member
checker check(logic a, b, c, clk, rst);
^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p491.sv:1:38: error: expected declarator
checker check(logic a, b, c, clk, rst);
                                     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p491.sv:24:1: error: expected member
endchecker : check
^~~~~~~~~~
